--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
             <li class="item">
               <a class="link-decoration services-position" href="">
                 <img
+                  srcset="./images/img-note.jpg 1x, ./images/img-note@2x.jpg 2x"
                   src="./images/img-note.jpg"
                   alt="Изображение ноутбука"
                   width="370"
@@ -171,6 +172,7 @@
             <li class="item services-position">
               <a class="link-decoration" href="">
                 <img
+                  srcset="./images/box.jpg 1x, ./images/box@2x.jpg 2x"
                   src="./images/box.jpg"
                   alt="Изображение телефона"
                   width="370"
@@ -184,6 +186,7 @@
             <li class="item services-position">
               <a class="link-decoration" href="">
                 <img
+                  srcset="./images/img-mon.jpg 1x, ./images/img-mon@2x.jpg 2x"
                   src="./images/img-mon.jpg"
                   alt="Изображения монитора"
                   width="370"
@@ -203,6 +206,7 @@
             <li class="item">
               <img
                 class="team-image"
+                srcset="./images/team1.jpg 1x, ./images/team1@2x.jpg 2x"
                 src="./images/team1.jpg"
                 alt="Фото Николай Кучеренко"
                 width="270"
@@ -256,6 +260,7 @@
             <li class="item">
               <img
                 class="team-image"
+                srcset="./images/team2.jpg 1x, ./images/team2@2x.jpg 2x"
                 src="./images/team2.jpg"
                 alt="Фото Ольга Иванова"
                 width="270"
@@ -309,6 +314,7 @@
             <li class="item">
               <img
                 class="team-image"
+                srcset="./images/team3.jpg 1x, ./images/team3@2x.jpg 2x"
                 src="./images/team3.jpg"
                 alt="Фото Андрей Шевченко"
                 width="270"
@@ -362,6 +368,7 @@
             <li class="item">
               <img
                 class="team-image"
+                srcset="./images/team4.jpg 1x, ./images/team4@2x.jpg 2x"
                 src="./images/team4.jpg"
                 alt="Фото Иван Николаев"
                 width="270"
