--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Website navigation -->
-    <header class="heder">
+    <header class="heder heder-portfolio">
       <div class="container page-header">
         <nav class="main-nav">
           <div class="mobi-container">
@@ -139,7 +139,7 @@
                 </div>
                 <div class="card-content">
                   <h2 class="portfolio-subtitle">
-                    Постер New Orlean vs Golden Star
+                    Постер New Orlean vs Golden
                   </h2>
                   <p class="portfolio-desc">Дизайн</p>
                 </div>
