--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <!-- Services -->
       <section class="section services-none">
         <div class="container">
-          <h2 class="section-title title-hidden">Чем мы занимаемся</h2>
+          <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="services">
             <li class="item">
               <a class="link-decoration services-position" href="">
