--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
             >
             <button
               type="button"
-              class="menu-button is-open"
+              class="menu-button"
               aria-expanded="false"
               aria-controls="menu-container"
               data-menu-button
@@ -36,11 +36,11 @@
                 aria-label="Переключатель мобільного меню"
               >
                 <use
-                  class="icon-menu"
+                  class="icon-close"
                   href="./images/sprite.svg#close_40px"
                 ></use>
                 <use
-                  class="icon-close"
+                  class="icon-menu"
                   href="./images/sprite.svg#menu_40px"
                 ></use>
               </svg>
