забрала фіксовані висоти

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Website navigation -->
     <header class="heder">
-      <div class="container page-header">
+      <div class="container">
         <nav class="main-nav">
           <div class="mobi-container">
             <a href="" class="logo-black"
